# cruxcut_v001-1

./: .gitignore  .vercelignore  README.md  opencv_test.py  package.bash  pyproject.toml  requirements.txt
.vercel/: project.json
crux-cut/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
crux-cut/app/: layout.tsx  page.tsx
crux-cut/components/: features-section.tsx  file-upload-card.tsx  footer.tsx  header.tsx  hero-section.tsx  pricing-section.tsx  testimonials-section.tsx  theme-provider.tsx
crux-cut/public/: manifest.json  sw.js
demo_v002/app/: main.py  main_elder.py  model.py  test.py  video_cropper_oop.py  video_cropper_oop_elder.py
demo_v002/app/templates/: index.html
demo_v002/templates/: index_elder.html
scripts/: debug_back.py  download_folder.sh  main.py  main_new.py  profiler.py  python_jiho_multiprocessing.py  setup_fastapi.py  video_cropper.py  video_cropper_oop.py  visualize.ipynb
