[project]
name = "cruxcut-v001-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (==4.9.0.80)",
    "ultralytics (==8.3.146)",
    "mediapipe (==0.10.21)",
    "moviepy (==1.0.3)",
    "boto3 (>=1.39.1,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
